# validador_controladoria

./: .env.example  .gitignore  FORMATO_EXCEL.md  ImportadorControladoria.spec  ImportadorControladoriaOrcado.html  README.md  REGRAS_VALIDACAO.md  criar_excel_exemplo.py  interface_grafica.py  main.py  processar_arquivo.py  pyproject.toml  requirements.txt  run_importador.sh  setup.py  setup_windows.py
arquivos_teste/: teste_compatibilidade_antigo.xlsx  teste_completo_novos_campos.xlsx  teste_novos_campos.py  teste_validacao_origem.xlsx  teste_validacao_rateio.xlsx
config/: bigquery-credentials.example.json
config/great_expectations/expectations/: .ge_store_backend_id
data/: .~lock.dados_teste.xlsx#  .~lock.dados_validos.xlsx#  dados_teste.csv  dados_teste.xlsx  dados_transformados.csv  dados_validos.csv  dados_validos.xlsx  modelo_importacao.csv  modelo_importacao.xlsx  teste.csv
src/importador_controladoria/: __init__.py  config.py  interface.py  main.py  transformacoes.py
src/importador_controladoria/templates/: base.html  diagnostico_bigquery.html  index.html  processamento.html  registros.html  regras.html  resultado.html
