[project]
name = "importador-controladoria"
version = "0.1.0"
description = "Importador de dados com validação de qualidade para Controladoria"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "numpy==1.24.3",
    "pandas==2.0.3",
    "great-expectations==1.3.14",
    "openpyxl==3.1.5",
    "PyQt6==6.9.0",
    "google-cloud-bigquery==3.11.0",
    "google-auth==2.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/importador_controladoria"]

[project.scripts]
importador-controladoria = "importador_controladoria.interface:main"
