[project]
name = "importador-controladoria"
version = "0.1.0"
description = "Importador de dados com validação de qualidade para Controladoria"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.1.4",
    "openpyxl>=3.1.2",
    "google-cloud-bigquery>=3.0.0",
    "google-auth>=2.22.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "colorama>=0.4.6",
    "xlrd>=2.0.1",
    "flask>=3.1.0",
    "pyarrow>=19.0.1",
    "markdown>=3.5.1",
    "pyinstaller>=6.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/importador_controladoria"]

[project.scripts]
importador-controladoria = "importador_controladoria.interface:main"
